[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/blocks/block_template.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/block_powerup.gd" type="Script" id=2]
[ext_resource path="res://assets/meshes/calc.glb" type="PackedScene" id=3]
[ext_resource path="res://assets/meshes/floppy.glb" type="PackedScene" id=4]
[ext_resource path="res://assets/meshes/phone.glb" type="PackedScene" id=5]
[ext_resource path="res://assets/meshes/cassette.glb" type="PackedScene" id=6]
[ext_resource path="res://assets/materials/particles_powerup.tres" type="Material" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.35, 1, 0.75 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.35, 1, 1.6 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.12, 1, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1, 1.5 )

[sub_resource type="Animation" id=5]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("powerup_calc:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("powerup_cassette:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("powerup_floppy:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("powerup_phone:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="PrismMesh" id=7]
size = Vector3( 0.1, 0.1, 0.05 )

[node name="platform" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="powerup_calc" parent="." index="1" instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1, 0 )
visible = false

[node name="area" type="Area" parent="powerup_calc" index="1"]

[node name="CollisionShape" type="CollisionShape" parent="powerup_calc/area" index="0"]
shape = SubResource( 1 )

[node name="powerup_cassette" parent="." index="2" instance=ExtResource( 6 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 1, 0 )
visible = false

[node name="area" type="Area" parent="powerup_cassette" index="2"]

[node name="CollisionShape" type="CollisionShape" parent="powerup_cassette/area" index="0"]
shape = SubResource( 4 )

[node name="powerup_floppy" parent="." index="3" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1, 0 )
visible = false

[node name="area" type="Area" parent="powerup_floppy" index="2"]

[node name="CollisionShape" type="CollisionShape" parent="powerup_floppy/area" index="0"]
shape = SubResource( 2 )

[node name="powerup_phone" parent="." index="4" instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1, 0 )
visible = false

[node name="area" type="Area" parent="powerup_phone" index="5"]

[node name="CollisionShape" type="CollisionShape" parent="powerup_phone/area" index="0"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
autoplay = "spin"
playback_speed = 0.5
method_call_mode = 1
anims/spin = SubResource( 5 )

[node name="particles" type="Particles" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
emitting = false
amount = 36
lifetime = 0.44
one_shot = true
explosiveness = 1.0
randomness = 0.54
visibility_aabb = AABB( -1, -1, -1, 2, 2, 2 )
process_material = ExtResource( 7 )
draw_pass_1 = SubResource( 7 )
